[gd_scene load_steps=3 format=3 uid="uid://c2kcgkyekwmah"]

[ext_resource type="Script" uid="uid://bgp24ql1dqfm7" path="res://Scripts/trigger_level_transition.gd" id="1_t8w7d"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_emt24"]
size = Vector2(64, 64)

[node name="trigger_level_transition" type="Area2D"]
collision_layer = 8
collision_mask = 8
script = ExtResource("1_t8w7d")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_emt24")

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
